LAU-757 address most of the sonar code smells